<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    >

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.v7.widget.CardView
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_card_view"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:id="@+id/i_Item_Main"
                        android:src="@drawable/img4"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor2"
                        android:textSize="15sp"
                        android:text="@string/Item_Number"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor2"
                        android:textSize="20sp"
                        android:text="@string/Item_Name"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor2"
                        android:textSize="20sp"
                        android:text="@string/Item_Location"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColor2"
                            android:textSize="20sp"
                            android:text="@string/Rupee_Symbol"
                            android:layout_marginRight="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:textColor="@color/textColor2"
                            android:textSize="20sp"
                            android:text="@string/Cost_Of_Item"/>

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_To_Cart"
            android:id="@+id/b_Add_to_cart"
            android:background="@color/colorAccent"
            android:textColor="@color/textColor"
            android:layout_gravity="bottom"/>


    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>

